--- a/helloWorldApp/README
+++ b/helloWorldApp/README
@@ -1,5 +1,5 @@
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
-	Docket Bridge Network
+	Docker Bridge Network
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
 docker network create -d bridge --subnet=172.18.0.0/16 --gateway=172.18.0.1 pradiptaDockerPocBridgeNet
 docker build -f Dockerfile -t helloworldapp-test .
@@ -8,14 +8,14 @@ docker run -p 4500:4500 --network pradiptaDockerPocBridgeNet -it --rm --name hel
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
-	Docket start Nodejs container by binding to local file system and exposing a port
+	Docker start Nodejs container by binding to local file system and exposing a port
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
 docker run --env MOCK_PORT=4501 --expose 4501 -p 4501:4501 --network pradiptaDockerPocBridgeNet -it --name helloworldapp-test-4501 -v /home/pradipta/helloWorldApp:/home/pradipta/helloWorldApp -w /home/pradipta/helloWorldApp node node helloWorld.js
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
-	Docket Create nodejs helloworld app image and start two containers. Containers may not exit and hence stop and start them from other terminals
+	Docker Create nodejs helloworld app image and start two containers. Containers may not exit and hence stop and start them from other terminals
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
 docker build -f Dockerfile -t nodejs-helloworldapp .
 docker run --env MOCK_PORT=8531 --expose 8531 -p 8531:8531 --network pradiptaDockerPocBridgeNet -it --name nodejs-helloworldapp-node1 nodejs-helloworldapp
@@ -30,7 +30,7 @@ docker start container_id_1 container_id_2
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
-	Docket Create nodejs helloworld app image and start two containers. Containers may not exit and hence stop and start them from other terminals
+	Docker Create nodejs helloworld app image and start two containers. Containers may not exit and hence stop and start them from other terminals
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
 docker build -f Dockerfile -t nodejs-httpd-helloworldapp-lb .
 docker build -f Dockerfile-byIP -t nodejs-httpd-helloworldapp-lb-ip .
@@ -43,7 +43,7 @@ docker start container_id_1 container_id_2
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
-	Docket connect to an existing running container and open a terminal on /bin/bash shell
+	Docker connect to an existing running container and open a terminal on /bin/bash shell
 --------------------------------------------------------------------------------------------------------------------------------------------------------------
 docker exec -i -t cab30290b126 /bin/bash
 
